make parallel ExecutorProvider configurable (Platform vs. virtual threads)